# wads

./: .buildinfo  .gitignore  CI_CONFIG_GUIDE.md  CI_FIX_INSTRUCTIONS.md  CLAUDE.md  IMPROVED_MIGRATION_OUTPUT.md  PEP_725_COMPLETE_INDEX.md  PEP_725_IMPLEMENTATION_SUMMARY.md  PEP_725_MIGRATION_GUIDE.md  README.md  README_PEP_725.md  SYSTEM_DEPS_ACTUAL_IMPLEMENTATION.md  SYSTEM_DEPS_IMPLEMENTATION.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html  test_integration_system_deps.py  wads_configs.json
.claude/: CLAUDE.md
.claude/skills/: debug-ci.md  migrate-to-wads.md  setup-project.md  wads-changelog  wads-ci-health  wads-docs-coverage  wads-docstring-render  wads-import-time  wads-pypi-polish  wads-repo-doctor  wads-skillify  wads-test-coverage  wads-type-coverage
.github/workflows/: ci.yml  ci_new.yml  npm-ci-monorepo.yml  npm-ci.yml  uv-ci.yml
_modules/: index.html
_modules/wads/: ci_config.html  ci_migration.html  ci_secrets.html  config_comparison.html  fleet_migrate.html  github_ci_ops.html  install_skills.html  install_system_deps.html  licensing.html  migration.html  npm_config.html  pack.html  package_module.html  populate.html  profiles.html  project_setup.html  secrets_cli.html  setup_utils.html  templating.html  toml_util.html  user_dirs.html  util.html
_modules/wads/agents/: ci_debug_agent.html  dependency_resolver.html  test_analyzer.html
_modules/wads/scrap/: handle_non_python_installs.html
_modules/wads/scripts/: build_dist.html  export_ci_env.html  install_deps.html  read_ci_config.html  set_env_vars.html  validate_ci_env.html
_modules/wads/tests/: conftest.html  test_action_definitions.html  test_config_comparison.html  test_env_vars.html  test_integration_system_deps.html  test_migration.html  test_populate_and_pack.html  test_project_setup.html  test_script_cli.html  test_scripts.html  test_system_deps.html  test_user_dirs.html  test_uv_workflow_template.html  test_workflow_gates.html  test_workflow_template.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: wads.rst.txt
_sources/module_docs/wads/: agents.rst.txt  ci_config.rst.txt  ci_migration.rst.txt  ci_secrets.rst.txt  config_comparison.rst.txt  fleet_migrate.rst.txt  github_ci_ops.rst.txt  install_skills.rst.txt  install_system_deps.rst.txt  licensing.rst.txt  migration.rst.txt  migration_quick_ref.rst.txt  npm_config.rst.txt  pack.rst.txt  profiles.rst.txt  project_setup.rst.txt  scripts.rst.txt  secrets_cli.rst.txt  setup_utils.rst.txt  templating.rst.txt  toml_util.rst.txt  (+2 more)
_static/: documentation_options.js
actions/build-dist/: action.yml
actions/build-dist-uv/: action.yml
actions/export-ci-env/: action.yml
actions/install-deps/: action.yml
actions/install-deps-uv/: action.yml
actions/install-system-deps/: action.yml
actions/pypi-publish-uv/: action.yml
actions/pypi-upload/: action.yml
actions/read-ci-config/: action.yml
actions/run-tests-uv/: action.yml
actions/setup-python-uv/: action.yml
docs/: .buildinfo  genindex.html  index.html  index.md  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_sources/: table_of_contents.rst.txt
docs/module_docs/: wads.html
docsrc/: conf.py  index.rst  table_of_contents.rst
examples/: CONFIG_COMPARISON_README.md  analyze_real_ci_files.py  ci_migration_demo.py  config_comparison_demo.py
misc/docs/: UV_MIGRATION.md  WADS_DESIGN_NOTES.md  github_ci_publish_2025_mentions.md
module_docs/: wads.html
module_docs/wads/: agents.html  ci_config.html  ci_migration.html  ci_secrets.html  config_comparison.html  fleet_migrate.html  generate_project_wheels.html  github_ci_ops.html  install_skills.html  install_system_deps.html  licensing.html  migration.html  migration_quick_ref.html  npm_config.html  pack.html  package_module.html  populate.html  profiles.html  project_setup.html  scripts.html  secrets_cli.html  setup_utils.html  templating.html  toml_util.html  trans.html  user_dirs.html  util.html
wads/: __init__.py  ci_config.py  ci_debug_agent.py  ci_migration.py  ci_secrets.py  config_comparison.py  external_deps_migration.py  fleet_migrate.py  generate_project_wheels.py  github_ci_ops.py  install_skills.py  install_system_deps.py  licensing.py  migration.py  migration_quick_ref.py  npm_config.py  pack.py  package_module.py  populate.py  profiles.py  project_setup.py  secrets_cli.py  setup_utils.py  templating.py  toml_util.py  user_dirs.py  util.py
wads/agents/: __init__.py  ci_debug_agent.py  dependency_resolver.py  test_analyzer.py
wads/data/: github_ci_npm_stub.yml  github_ci_publish_2025.yml  github_ci_publish_2025_truly_dynamic.yml  github_ci_publish_2025_v2.yml  github_ci_publish_2025_v3.yml  github_ci_tpl.yml  github_ci_tpl_deploy.yml  github_ci_tpl_publish.yml  github_ci_uv.yml  github_ci_uv_stub.yml  gitlab_ci_tpl.yml  package_json_monorepo_pkg_tpl.json  package_json_monorepo_root_tpl.json  package_json_tpl.json  package_json_ts_tpl.json  pnpm_workspace_tpl.yaml  pyproject_toml_tpl  pyproject_toml_tpl.toml  test_smoke_tpl.py  tests_util_tpl.py  tsconfig_base_tpl.json  wads_configs.json
wads/examples/: migration_example.py  real_project_migration.py
wads/scrap/: handle_non_python_installs.py
wads/scripts/: __init__.py  build_dist.py  export_ci_env.py  install_deps.py  read_ci_config.py  set_env_vars.py  validate_ci_env.py
wads/tests/: conftest.py  test_action_definitions.py  test_ci_env_extraction.py  test_ci_secrets.py  test_config_comparison.py  test_export_ci_env.py  test_external_deps.py  test_frontend_profiles.py  test_install_extras.py  test_light_install.py  test_migration.py  test_npm_setup.py  test_package_generation.py  test_populate_and_pack.py  test_populate_characterization.py  test_project_setup.py  test_script_cli.py  test_scripts.py  test_secrets_cli.py  test_templating.py  test_tests_overlay.py  test_user_dirs.py  test_uv_workflow_template.py  test_workflow_gates.py  test_workflow_template.py
(+121 files in other folders)
